this commit will fixed the image not showing in the welder pages

--- a/css/cons.css
+++ b/css/cons.css
@@ -86,7 +86,14 @@
     background-image: url('../assets/roofing/roofer new.jpeg');
     background-size: cover;
     background-position: fixed;
-  
+  }
+.welder{
+  padding: 0;
+  height: 500px;
+  background-image: url('../assets/welding/welder1.jpeg');
+  background-size: cover;
+  background-position: fixed;
+
 }
 
 .overlay {
